--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<header class="header"">
+	<header class="header">
       <div class=" container">
 		<div class="header__body">
 			<div class="header__logo">
